
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ RTLINITUNICODESTRING ;
typedef scalar_t__ NTSETINFORMATIONPROCESS ;
typedef scalar_t__ NTREQUESTWAITREPLYPORT ;
typedef scalar_t__ NTREPLYWAITRECVIVEPORT ;
typedef scalar_t__ NTREPLYPORT ;
typedef scalar_t__ NTCREATEPORT ;
typedef scalar_t__ NTCONNECTPORT ;
typedef scalar_t__ NTCOMPLETECONNECTPORT ;
typedef scalar_t__ NTACCEPTCONNECTPORT ;
typedef int * HMODULE ;


 int GetLastError () ;
 scalar_t__ GetProcAddress (int *,char*) ;
 int * LoadLibrary (char*) ;
 scalar_t__ NtAcceptConnectPort ;
 scalar_t__ NtCompleteConnectPort ;
 scalar_t__ NtConnectPort ;
 scalar_t__ NtCreatePort ;
 scalar_t__ NtReplyPort ;
 scalar_t__ NtReplyWaitReceivePort ;
 scalar_t__ NtRequestWaitReplyPort ;
 scalar_t__ NtSetInformationProcess ;
 scalar_t__ RtlInitUnicodeString ;
 int printf (char*,int) ;

void initapi()
{
  HMODULE hNtdll;


    hNtdll = LoadLibrary("ntdll.dll");
    if(hNtdll == ((void*)0))
    {
        printf("LoadLibrary failed:%d\n", GetLastError());
    }
    NtReplyWaitReceivePort = (NTREPLYWAITRECVIVEPORT)
         GetProcAddress(hNtdll, "NtReplyWaitReceivePort");
    NtCreatePort = (NTCREATEPORT)
         GetProcAddress(hNtdll, "NtCreatePort");
    NtReplyPort = (NTREPLYPORT)
         GetProcAddress(hNtdll, "NtReplyPort");
    NtSetInformationProcess = (NTSETINFORMATIONPROCESS)
         GetProcAddress(hNtdll, "NtSetInformationProcess");
 NtRequestWaitReplyPort= (NTREQUESTWAITREPLYPORT)
   GetProcAddress(hNtdll,"NtRequestWaitReplyPort");

 NtConnectPort = (NTCONNECTPORT)
      GetProcAddress(hNtdll, "NtConnectPort");
 NtCompleteConnectPort = (NTCOMPLETECONNECTPORT)
      GetProcAddress(hNtdll, "NtCompleteConnectPort");
 NtAcceptConnectPort = (NTACCEPTCONNECTPORT)
      GetProcAddress(hNtdll, "NtAcceptConnectPort");
    RtlInitUnicodeString=(RTLINITUNICODESTRING)
         GetProcAddress(hNtdll,"RtlInitUnicodeString");

}
